# pycube

./: .gitignore  LICENSE  README.md  cli.py  dummy.ttl  example.ipynb  example.py  load.sh  pyproject.toml  requirements.txt  test.py  test.ttl  validation.py
.github/workflows/: ci.yaml  publish-pypi.yml
cubelink/: __init__.py
cubelink/cube/: cube.py
cubelink/getter/: get.py
cubelink/lindas/: namespaces.py
example/: $schema.json  mock-cube-cube-and-observations.ttl  mock-cube-cube.ttl  mock-cube.ttl  mock_cube.yml  mock_dimensions.yml
example/benchmark/: construct.py
example/co2-limits/: CO2-Emissionen aus Brennstoffen (witterungsbereinigt) und Treibstoffen-full.csv
example/corona/: cube.ttl  data.csv  description.json
example/kita/: .gitignore  Makefile  README.md  cube.ttl  data.csv  description.json
example/mock/: data.csv  description.yml  mock-cube-cube-and-observations.ttl
example/shared/: README.md
example/shared/bundeslander/: .gitignore  Makefile  README.md  data.ttl  schema.json  transform.py
example/wind/: Makefile  README.md  cube.ttl  data.csv  description.json  frictionless.json
fast-api-test/: main.py
linpy/: __init__.py
linpy/cube/: cube.py
linpy/lindas/: upload.py
py_cube/: __init__.py  cli.py  description.schema.json  fetch.py  frictionless.py
py_cube/cube/: cube.py  shared_dimension.py
py_cube/getter/: get.py
py_cube/lindas/: namespaces.py  query.py  upload.py
py_cube/tests/: test.yml  test_cube.py  test_data.csv
pylindas/: __init__.py  description.schema.json  example.py
pylindas/cube/: __init__.py
pylindas/pycube/: __init__.py  cube.py  shared_dimension.py
scripts/fuseki/: config-mem.ttl  start.sh
tests/: mock-cube.ttl  mock_cube.yml  mock_dimensions.yml  test_cube.py  test_cube.ttl  test_data.csv
