[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "py_cube"
version = "0.2.0"
dynamic = ["dependencies"]

[tool.hatch.build.targets.wheel]
packages = ["py_cube"]

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[project.scripts]
pycube = "py_cube.cli:main"