[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pylindas"
version = "0.4.2"
description = "Utilities for working with the linked data service LINDAS of the Swiss Federal Archives. Includes modules for working with cubes."
readme = "README.md"
authors = [{ name = "Marco Kronenberg", email="kronenberg.marco@bafu.admin.ch" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
keywords = ["linked data", "LINDAS", "cubes", "RDF"]
requires-python = ">=3.12"
dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
Homepage = "https://github.com/Kronmar-Bafu/py-cube"

[project.scripts]
pycube = "py_cube.cli:main"

[tool.bumpver]
current_version = "0.4.2"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
pre_commit_hook = ""
post_commit_hook = ""

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"pylindas/__init__.py" = ["{version}"]
